# Scrapontologies

./: .env.example  .gitignore  .releaserc.yml  CHANGELOG.md  README.md  SmartEntities.py  canvas_to_use_the lib.py  config.py  example_usage.py  graph.html  pdf_processor.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: codeql.yml  release.yml  update-requirements.yml
examples/: .env.example  example_renderer.py  extract_entities_from_pdf.py  extract_entities_from_pdf_with_langchain_client.py  extract_entities_json_schema_from_pdf.py  extract_entities_relations_from_pdf.py  extract_entities_relations_schema_from_pdf.py  generate_postgres_tables_from_pdf.py  generate_tables_from_pdf.py  graph.html  merge_schemas.py  prompt_based_extraction.py
scrapeschema/: __init__.py  entities.py  extractor.py  primitives.py
scrapeschema/parsers/: __init__.py  base_parser.py  pdf_parser.py  pdf_parser_deprecated.py  prompts.py
scrapeschema/renderers/: __init__.py  pyecharts_renderer.py
scrapontologies/: __init__.py  extractor.py
scrapontologies/parsers/: __init__.py  prompts.py
scrapontologies/renderers/: base.py
scrapontology/: __init__.py  db_client.py  extractor.py  llm_client.py  primitives.py
scrapontology/llm_client/: __init__.py  lc_llm_client.py  llm_client.py  openai_llm_client.py
scrapontology/parsers/: base_parser.py  pdf_parser.py  prompts.py
streamlit/: main.py
