[project]
name = "scrapeschema"
version = "0.0.1"
description = "library for creating ontologies from documents"
authors = [
    { name = "Marco Vinciguerra", email = "mvincig11@gmail.com" },
    { name = "Marco Perini", email = "perinim.98@gmail.com" },
    { name = "Lorenzo Padoan", email = "lorenzo.padoan977@gmail.com" }
]

dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "idna==3.8",
    "pdf2image==1.17.0",
    "pillow==10.4.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "urllib3==2.2.2"
]

license = "MIT"
readme = "README.md"
homepage = "https://scrapegraphai.com/"
repository = "https://github.com/ScrapeGraphAI/ScrapeSchema"
documentation = ""
keywords = [
    "scrapegraph",
    "scrapegraphai",
    "langchain",
    "ai",
    "artificial intelligence",
    "gpt",
    "machine learning",
    "rag",
    "nlp",
    "natural language processing",
    "openai",
    "scraping",
    "web scraping",
    "web scraping library",
    "web scraping tool",
    "webscraping",
    "graph",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9,<4.0"

[project.optional-dependencies]
burr = ["burr[start]==0.22.1"]
docs = ["sphinx==6.0", "furo==2024.5.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.0.0",
    "pytest-mock==3.14.0",
    "-e file:.[burr]",
    "-e file:.[docs]",
    "pylint>=3.2.5",
]
